# ASCII-Camera

./: .gitignore  ASCII-Camera.csproj  CMakeLists.txt  README.md
src/: camera.cpp  camera.hpp  console.cpp  console.hpp  main.cpp
